<resources>
    <string name="app_name">IndiaELearn</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tab1learning">tab1learning</string>
    <string name="title_activity_government_section">Government Section</string>
    <string-array name="array_government_courses">
        <item>SBI PO EXAM 2017</item>
        <item>SSC CGL EXAM 2017</item>
        <item>RBI GRADE B EXAM 2017</item>
        <item>INDIAN RAILWAYS EXAM 2017</item>
        <item>LIC AAO EXAM 2017</item>
        <item>IBPS SO EXAM 2017</item>
        <item>IBPS CLERK EXAM 2017</item>
        <item>SBI CLERK EXAM 2017</item>
        <item>TET EXAM 2017</item>
        <item>UPSC EXAM 2017</item>


    </string-array>
    <string-array name="array_entrepreneur_courses">
        <item>B-PLAN</item>
    </string-array>
    <string-array name="array_programming_courses">
        <item>CSS</item>
        <item>HTML</item>
        <item>ANDROID</item>
        <item>PYTHON</item>
        <item>JAVA PROGRAMMING</item>
        <item>C++ PROGRAMMING</item>
        <item>C PROGRAMMING</item>
    </string-array>
    <string-array name="array_technology_courses">
        <item>DIGITAL MARKETING</item>
        <item>BLOGGING</item>

    </string-array>
    <string name="title_activity_entrepreneur_section">Entrepreneur Section</string>
    <string name="title_activity_programming_section">Programming Section</string>
    <string name="title_activity_technology_section">technologySection</string>
    <string name="tab_community_str_show_pass">Show Password</string>
    <string name="tab_community_str_btn_login">Login</string>
    <string name="tab_community_hint_enter_username_email">Enter Username or Email</string>
    <string name="tab_community_hint_enter_password">Password</string>
    <string name="tab_community_link_to_register">Not have an account?Sign Up.</string>
    <string name="tab_community_link_to_login">Already Registered.Login Me</string>
    <string name="tab_community_register_hint_name">Full Name</string>
    <string name="tab_community_register_hint_username">Username</string>
    <string name="tab_community_register_hint_password">Password</string>
    <string name="tab_community_register_hint_email">Email</string>
    <string name="tab_community_btn_register">Register</string>
    <string name="tab_community_open_drawer">technologySection</string>
    <string name="tab_community_close_drawer">technologySection</string>
    <string name="title_activity_navigation_drawer">Discover</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_navigate_to_government">Discover</string>
    <string name="title_activity_navigate_to_programming">Discover</string>
    <string name="title_activity_navigate_to_technology">Discover</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_description_title">Course Description</string>
    <string name="course_certificate_title">Certificate</string>
    <string name="course_curriculum_title">Curriculum</string>
    <string name="course_instructors_title">Instructors</string>
    <string name="course_rating_title">Rating</string>
    <string name="course_description_ibpsso_part1">IBPS SO Recruitment 2016 \-2017 </string>
    <string name="course_description_ibpsso_part2">The institute of banking personal selection has been declared IBPS SO Recruitment 2016\-2017 notication. IBPS will be conducted of IBPS CWE VI exam for fill up specialist officer vacant posts in 23 plus banking systems. Candidates can able to apply from 16th November 2016. </string>
    <string name="course_description_ibpsso_part3">Applicants can apply for IBPS SO Recruitment 2016\-17 by filling online application on or before 2nd December 2016. As we all know that selection will be done through pre and main written exam and interview. </string>
    <string name="course_description_ibpsso_part4">The recruitment IBPS SO exam tentatively scheduled to be held in 28th January and 29th January 2017. If you want to get more details then visit the website of www.ibps.in.</string>
    <string name="course_description_ibpsso_part5">IBPS SO Exam:</string>
    <string name="course_description_ibpsso_part6">IBPS stands for Institute of banking personnel selection is an organization which offers services to candidates in fields of personnel selection, assessment, and recruitment. </string>
    <string name="course_description_ibpsso_part7">. IBPS conducts examinations to recruitment in various banking departments in more than 100 cities. It is responsible for recruit manpower in banks according to their needs. The recruitment will be made for 56 Regional Rural banks. Now IBPS is going to conduct IBPS SO Exam 2016 for recruitment of Specialist officer posts. The IBPS SO Recruitment 2016"en dash"2017 application process is likely to start from 16th November 2016 and the last date to apply online is 2nd December 2016. </string>
    <string name="course_description_ibpsclerk_part1">Exam for the post: </string>
    <string name="course_description_ibpsclerk_part2"> IBPS CLERK </string>
    <string name="course_description_ibpsclerk_part3">Exam Conducting Body: </string>
    <string name="course_description_ibpsclerk_part4"> Institute of Banking Personnel Selection (IBPS)  </string>
    <string name="course_description_ibpsclerk_part5">Exam Level: </string>
    <string name="course_description_ibpsclerk_part6">All India level exam.</string>
    <string name="course_description_ibpsclerk_part7">Posts Offered:</string>
    <string name="course_description_ibpsclerk_part8"> Clerk (Clerical Cadre) in the following list of  public sector banks. During online registration, you have to fill the preference order of the 19 Nationalized Banks, and to decide which bank to fill on the first order is an important factor. In this article, we will help you to choose the right bank in your preference order of the banks. </string>
    <string name="course_description_ibpsclerk_part9">IBPS Clerk Eligibility Criteria:</string>
    <string name="course_description_ibpsclerk_part10"> Candidates applying for IBPS Clerk exam should ensure that they fulfill the following Eligibility Criteria before applying to the said exam. Their candidature ship is deemed to be rejected if they do fulfill the necessary criteria laid down under IBPS Clerk Eligibility Criteria. The different parameters of IBPS Clerk Eligibility Criteria have been mentioned below. </string>
    <string name="course_description_ibpsclerk_part11">⦁	The aspirant applying for IBPS Clerk exam should hold a graduate or equivalent degree from any centrally recognized university.</string>
    <string name="course_description_ibpsclerk_part12">⦁	Knowledge of computer is necessary for applying to the said exam. </string>
    <string name="course_description_blogging_part1">A blog is a website in which items are posted on a regular basis and displayed in reverse chronological order. </string>
    <string name="course_description_blogging_part2"> The term blog is a shortened form of weblog or web log. Authoring a blog, maintaining a blog or adding an article to an existing blog is called \“blogging\”. </string>
    <string name="course_description_blogging_part3">Individual articles on a blog are called \“blog posts,\” \“posts\” or \ “entries\”. A person who posts these entries is called a \“blogger\”. </string>
    <string name="course_description_blogging_part4">A blog comprises text, hypertext, images, and links (to other web pages and to video, audio and other files). </string>
    <string name="course_description_blogging_part5">Blogs use a conversational style of documentation. Often blogs focus on a particular \“area of interest\”, such as Washington, D.C.\’s political goings-on.</string>
    <string name="course_description_python_part1">Python is an interpreted, object-oriented, high-level programming language with dynamic semantics. </string>
    <string name="course_description_python_part2">Its high-level built in data structures, combined with dynamic typing and dynamic binding, make it very attractive for Rapid Application Development, as well as for use as a scripting or glue language to connect existing components together. </string>
    <string name="course_description_python_part3">Python\'s simple, easy to learn syntax emphasizes readability and therefore reduces the cost of program maintenance. </string>
    <string name="course_description_python_part4">Python supports modules and packages, which encourages program modularity and code reuse. </string>
    <string name="course_description_python_part5">The Python interpreter and the extensive standard library are available in source or binary form without charge for all major platforms, and can be freely distributed. </string>
    <string name="course_description_java_part1">Java is a programming language expressly designed for use in the distributed environment of the Internet.</string>
    <string name="course_description_java_part2">It was designed to have the\"look and feel\" of the C++ language, but it is simpler to use than C++ and enforces an object-oriented programming model. </string>
    <string name="course_description_java_part3">Java can be used to create complete applications that may run on a single computer or be distributed among servers and clients in a network</string>
    <string name="course_description_java_part4"> Java can be used to create complete applications that may run on a single computer or be distributed among servers and clients in a network</string>
    <string name="course_description_java_part5">It can also be used to build a small application module or applet for use as part of a Web page. Applets make it possible for a Web page user to interact with the page.</string>
    <string name="course_description_cpart1">C is a high-level and general purpose programming language that is ideal for developing firmware or portable applications. Originally intended for writing system software, C was developed at Bell Labs by Dennis Ritchie for the Unix Operating System (OS) in the early 1970s.</string>
    <string name="course_description_cpart2">Ranked among the most widely used languages, C has a compiler for most computer systems and influenced many popular languages – notably C++.</string>
    <string name="course_description_bplan_part1">A Business Plan is a formal statement of Business Goals,Reasons they are attainable,and plans for reaching them.It may also contain background information about the organisation or team attempting to reach their goals.</string>
    <string name="course_description_bplan_part2">When the existing business is to assume major change or when planning a new venture,a 3 to 5 year business plan is required</string>
    <string name="course_description_bplan_part3">Perception is the process by which a person selects, organises, and interprets stimuli to create a meaningful picture of the world</string>
    <string name="course_description_bplan_part4">http://businesswales.gov.wales/zones/starting-up</string>
    <string name="course_description_certificate">Certificate:</string>
    <string name="course_description_bplan_part5">Send us a screenshot of your Quiz if you pass the exam.Mail us:certificate@indiaelearn.com.We will get back to you within 48 hours.</string>
    <string name="curriculum_lecture1">What is Digital Marketing? Why Digital Marketing? How to do Digital Marketing?</string>
    <string name="curriculum_lecture2">On Page Search Engine Optimization(SEO)Training course</string>
</resources>