<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_community_register"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mania.indiaelearn.CommunityRegisterActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="360dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/community_linear_layout_register"
        android:orientation="vertical">

        <EditText
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:id="@+id/community_register_full_name"
            android:layout_gravity="center"
            android:hint="@string/tab_community_register_hint_name"
            android:layout_marginTop="20dp"
        />

        <EditText
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:id="@+id/community_register_user_name"
            android:layout_gravity="center"
            android:hint="@string/tab_community_register_hint_username"
            android:layout_marginTop="20dp"
        />

        <EditText
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:id="@+id/community_register_password"
            android:hint="@string/tab_community_register_hint_password"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
        />

        <EditText
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:id="@+id/community_register_email"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:hint="@string/tab_community_register_hint_email"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/community_btn_register"
            android:background="#64B5F6"
            android:text="@string/tab_community_btn_register"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:elevation="3dp"
        />
    </LinearLayout>


    <Button
        android:id="@+id/community_link_login"
        android:text="@string/tab_community_link_to_login"
        android:layout_width="wrap_content"
        android:textColor="#FF9800"
        android:layout_height="wrap_content" android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" android:layout_marginBottom="45dp"
        android:background="@null"

    />
</RelativeLayout>
