<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.mania.indiaelearn.digitalMarketingFragment"
android:background="#9E9E9E">

<!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:text="@string/course_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/course_description_title"
                android:background="#FFFFFF"
                android:padding="2dp"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_margin="5dp" />

            <TextView
                android:text="@string/course_description_bplan_part1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/course_description_part1"
                android:background="#FFFFFF"
                android:padding="2dp"
                android:textSize="20dp"
                android:textStyle="italic"
                android:layout_margin="5dp"
                android:layout_below="@+id/course_description_title"
                />
            <TextView
                android:text="@string/course_description_bplan_part2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/course_description_part2"
                android:background="#FFFFFF"
                android:padding="2dp"
                android:textSize="20dp"
                android:textStyle="italic"
                android:layout_margin="5dp"
                android:layout_below="@+id/course_description_part3"/>
            <TextView
                android:text="@string/course_description_bplan_part3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/course_description_part3"
                android:background="#FFFFFF"
                android:padding="2dp"
                android:textSize="20dp"
                android:textStyle="italic"
                android:layout_margin="5dp"
                android:layout_below="@+id/course_description_part2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:padding="2dp"
                android:textSize="20dp"
                android:textStyle="italic"
                android:layout_margin="5dp"
                android:text="Refer Here"
                android:layout_below="@+id/course_description_part3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_description_bplan_part4"
                android:autoLink="all"
                android:clickable="true"
                android:background="#FFFFFF"
                android:padding="2dp"
                android:textSize="20dp"
                android:textStyle="italic"
                android:layout_margin="5dp"
                android:layout_below="@+id/course_description_part3"
                android:id="@+id/course_description_part4" />
            <TextView
                android:text="@string/course_description_certificate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/course_description_certificate"
                android:background="#FFFFFF"
                android:padding="2dp"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:layout_below="@+id/course_description_part4"/>

            <TextView
                android:text="@string/course_description_bplan_part5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/course_description_part5"
                android:background="#FFFFFF"
                android:padding="2dp"
                android:textSize="20dp"
                android:textStyle="italic"
                android:layout_margin="5dp"
                android:layout_below="@+id/course_description_certificate"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
