<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".CommunityLoginActivity">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="260dp"
        android:layout_marginTop="73dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true" android:layout_centerHorizontal="true"
        android:id="@+id/community_linear_layout">

        <EditText
            android:id="@+id/community_login_username_email"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="45dp"
            android:layout_gravity="center"
            android:maxLines="1"
            android:hint="@string/tab_community_hint_enter_username_email"
        />

        <EditText
            android:id="@+id/community_login_password"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/tab_community_hint_enter_password"
        />

        <CheckBox
            android:id="@+id/community_login_show_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_community_str_show_pass"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"
            android:textColor="@color/colorPrimary"
        />

        <Button
            android:id="@+id/community_btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_community_str_btn_login"
            android:background="#64B5F6"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:elevation="3dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/community_link_register"
        android:text="@string/tab_community_link_to_register"
        android:layout_width="wrap_content"
        android:textColor="#FF9800"
        android:layout_height="wrap_content" android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" android:layout_marginBottom="30dp"
        android:background="@null"

    />
    <com.google.android.gms.common.SignInButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/community_google_sign_in"
        android:layout_below="@+id/community_linear_layout" android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

    </com.google.android.gms.common.SignInButton>

</RelativeLayout>